fix(navbar): corregir contraste WCAG y reducir altura
- Eliminar gradiente fantasma de Bootstrap (--bs-gradient: none)
- Forzar color blanco en todos los nav-links para WCAG AAA
- Reducir padding vertical del navbar (más delgado)
- Asegurar contraste 8.19:1 en todos los estados

--- a/scss/custom/_variables.scss
+++ b/scss/custom/_variables.scss
@@ -32,7 +32,7 @@ $gray-900: #212529 !default;
 $black:    #000 !default;
 
 // --- Color Palette ---
-$blue:     #038AFF !default;
+$blue:     #0A4FA3 !default;
 $indigo:   #6610f2 !default;
 $purple:   #6f42c1 !default;
 $pink:     #d63384 !default;
@@ -315,4 +315,6 @@ $zindex-toast: 1090 !default;
 $transition-base: all 0.2s ease-in-out !default;
 $transition-fade: opacity 0.15s linear !default;
 $transition-collapse: height 0.35s ease !default;
+
+
 
